manifests/production/odoo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  namespace: odoo-prod
  labels:
    app: odoo-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo-prod
  template:
    metadata:
      labels:
        app: odoo-prod
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - tambun-worker2
      containers:
        - name: odoo
          image: cx-harbor.btech.id/cusex/odoo:16-v2.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8069
          volumeMounts:
            - mountPath: /var/lib/odoo
              name: odoo-web
            - mountPath: /mnt/extra-addons
              name: odoo-addons
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: odoo-web
          persistentVolumeClaim:
            claimName: odoo-prod-web-claim
        - name: odoo-addons
          persistentVolumeClaim:
            claimName: odoo-prod-addons-claim
