manifests/production/postgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: odoo-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-prod
  template:
    metadata:
      labels:
        app: postgres-prod
    spec:
      containers:
        - name: postgres
          image: postgres:15.1-bullseye
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgresql-data-prod-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: odoo-prod
  labels:
    app: postgres-prod
spec:
  # clusterIP: 10.233.70.51
  type: NodePort
  selector:
    app: postgres-prod
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
